# adjacency-scheduler

./: Cargo.toml  Cargo.toml.bk  Dockerfile  README.md  README.md.bk  cargo.toml  mandlebot.Dockerfile  rustup-Dockerfile  ubuntu-Dockerfile
adjacency-scheduler/: Cargo.toml  build.rs
adjacency-scheduler-common/: Cargo.toml
adjacency-scheduler-ebpf/: Cargo.toml
adjacency-scheduler-ebpf/src/: main.rs
adjacency-scheduler/src/: main.rs
cgroup-skb-egress/: Cargo.toml
cgroup-skb-egress-common/: Cargo.toml
cgroup-skb-egress-common/src/: lib.rs
cgroup-skb-egress-ebpf/: Cargo.toml
cgroup-skb-egress-ebpf/src/: bindings.rs  main.rs
cgroup-skb-egress/need_to_be_converted_to_rust/: README.md  go.mod  main.go
cgroup-skb-egress/src/: ebpf-lifecycle.rs  inspect.rs  lookuptable.rs  main.rs  reconnaissance.rs
dataplane/conn_track_ebpf/: Cargo.toml
dataplane/src/: ebpf_program.rs
manifests/: clusterRoleBinding.yaml  clusterrole.yaml  configMap.yaml  deployment.yaml  ingress-grpc.yaml  ingress.yaml  service.yaml  serviceAccount.yaml
scheduler/: README.md  client.go  go.mod  main.go
src/: ebpf_program.rs  main.rs
test/consumer/: go.mod  main.go
test/producer/: Dockerfile  go.mod  main.go
