[workspace]
resolver = "2"

[workspace.package]
name = "adjacency-scheduler"
version = "0.1.0"
authors = ["shishir9159 nahidhasan43@iut-dhaka.edu"]
edition = "2021"
rust-version = "1.83"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shishir9159/adjacency-scheduler"
description = """

"""

[workspace.dependencies]
aya = "0.13.1"
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.1"
tokio = { version = "1.42.0", features = ["full"] }

[workspace.build-dependencies]
aya-ebpf-bindings = "0.1.1"

#[workspace.lib]
#crate-type = ["staticlib"]

#[workspace]
#members = [
#    "connection_tracking"
#    , "adjacency-scheduler"]

#[profile.release]
#panic = "abort"
lto = true