[package]
name = "adjacency-scheduler-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
adjacency-scheduler-common = { path = "../adjacency-scheduler-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "adjacency-scheduler"
path = "src/main.rs"
