[package]
name = "cgroup-skb-egress"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
cgroup-skb-egress-common = { path = "../cgroup-skb-egress-common", features = [
  "user",
] }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.25", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
] }
bytes = "1"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
reqwest = { version = "0.11", features = ["json"] }
prost-types = { version = "0.13.4" }
tonic = "0.12.3"
dirs = "6.0.0"
hyper-util = "0.1.10"
tower = "0.5.2"

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"

# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
cgroup-skb-egress-ebpf = { path = "../cgroup-skb-egress-ebpf" }

[[bin]]
name = "cgroup-skb-egress"
path = "src/ebpf-lifecycle.rs"
